# nfl-odds-databricks

./: .gitignore  README.md  databricks.yml  nfl-odds-databricks.code-workspace  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  stage_odds.yml
agent-tools/: 742bfcd6-66e7-4af9-8e5b-a4a6d237b3b8.txt
docs/: README.md
notebooks/: build_nfl_core.py  ingest_nfl_odds.py  ingest_nflverse.py  ingest_nflverse_pbp.py  ingest_nflverse_pbp_current.py  mock_fantasy_draft.py  monte_carlo_weekly_accuracy.py  monte_carlo_weekly_picks.py
resources/: nfl_monte_carlo_accuracy_job.yml  nfl_monte_carlo_picks_job.yml  nfl_pbp_current_job.yml  nfl_pbp_job.yml  nfl_weekly_pipeline.yml
scripts/: acquire_nflverse.py  acquire_pbp.py  acquire_pbp_current.py  build_core_local.py  deploy_bundle.py  email_weekly_picks.py  run_local.py  stage_odds.py
src/nfl_odds/: __init__.py  fantasy.py  fetch.py  notifications.py  quality.py  schedule.py  simulation.py  transform.py
staging/: odds_latest.json
tests/: conftest.py  test_core.py  test_fantasy.py  test_fetch.py  test_nflverse_data.py  test_notifications.py  test_pbp_current.py  test_quality.py  test_schedule_match.py  test_simulation.py  test_simulation_grading.py  test_spark_io.py  test_transform.py
